--- a/css/marqueEtat/modules/fonts.css
+++ b/css/marqueEtat/modules/fonts.css
@@ -1,4 +1,31 @@
 @font-face {
+  font-family: 'Marianne';
+  font-display: swap;
+  src: url(fonts/Marianne-Light.ttf) format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Marianne';
+  font-display: swap;
+  src: url(fonts/Marianne-Regular.ttf) format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Marianne';
+  font-display: swap;
+  src: url(fonts/Marianne-Bold.ttf) format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Marianne';
+  font-display: swap;
+  src: url(fonts/Marianne-ExtraBold.ttf) format('truetype');
+  font-weight: 800;
+}
+@font-face {
     font-family: 'Spectral';
     src: url(fonts/Spectral-ExtraLight.ttf) format('truetype');
     font-weight: 200;
