maj data et mise en page

--- a/css/marqueEtat/book.css
+++ b/css/marqueEtat/book.css
@@ -5,7 +5,7 @@
 
 @import 'modules/reset.css';
 @import "modules/fonts.css";
-
+@import "modules/colors.css";
 @import "modules/vars.css";
 @import "modules/body.css";
 @import "modules/header.css";
@@ -16,6 +16,8 @@
 @import "modules/notes.css";
 @import "modules/title.css";
 @import "modules/page2.css";
+@import "modules/page3.css";
+@import "modules/page4.css";
 /* @import "modules/title.css"; */
 
 
