--- a/css/marqueEtat/modules/page2.css
+++ b/css/marqueEtat/modules/page2.css
@@ -4,7 +4,8 @@
 
 @page page2 {
   margin: 8mm;
-  margin-top: 12mm;
+  margin-bottom: 8mm;
+  margin-top: 8mm;
 }
 
 .page2 .figure img {
@@ -14,35 +15,121 @@
 }
 
 .page2 {
-  margin-left: 10mm;
   /* width: 100%; */
-  width: calc(100% - 4mm);
   display: grid;
-  grid-template-columns: [left] 1fr [right] 1fr [end];
+  column-gap: 3mm;
+  grid-template-columns: [left] 40% [right] 1fr [end];
 }
 
 .page2 .header {
-  grid-column: left / end;
-  margin-top: 0;
+  grid-column: left;
+  grid-template: inherit;
+  padding-right: 3em;
+  margin-top: calc(2 * var(--font-lineHeight));
 }
 
 .page2 .header h2 {
-  font-size: 3em;
+  /* width: min-content; */
+  font-size: 2.4em;
+  line-height: 1.1;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 800;
+  border-bottom: 2px solid var(--color-secondary);
+  color: var(--color-body);
+  margin-right: 1ch;
+  margin-bottom: .3em;
+  display: block;
 }
 
 .page2 .header p {
-  max-width: 45ch;
-  font-weight: 300;
-  font-size: 1.3em;
+  font-weight: 500;
+  font-size: 1.2em;
   font-family: var(--font-title);
-
-  margin-bottom:2em;
+  line-height: 1.3;
+  max-width: 43ch;
 }
 
-.page2 .section img {
-  width: 100px;
+.page2 .sub {
+  font-family: var(--font-serif);
+  grid-column: end;
+  margin-bottom: 2em;
 }
 
-.page2 img {
-  height: 200px !important;
+.page2 .sub img {
+  height: 140px !important;
+  /* float: right; */
+  display: block;
+  margin-left: auto;
 }
+
+.page2 h3 {
+  background: white;
+  margin-bottom: var(--font-lineHeight);
+  margin-top: calc(var(--font-lineHeight) * 2);
+  position: relative;
+  color: var(--color-primary);
+  break-before: avoid;
+}
+
+.page2 .sub p, .page2 .sub ul  {
+  padding-left: 1.5ch;
+  border-left: 3px solid var(--color-primary);
+  hyphens: auto;
+  line-height: var(--font-lineHeight);
+}
+
+.page2 .sub ul  {
+  margin-left: 0;
+  padding-left: 5ch;
+}
+
+.page2 .sub li {
+  line-height: var(--font-lineHeight);
+}
+
+.page2 .sub img {
+  display: none;
+}
+
+
+/* update */
+
+
+
+
+#la-forge-logicielle {
+}
+
+.page2 .titlezone * {
+  font-weight: 300 !important;
+}
+
+.page2 .titlezone h1 {
+  font-size: 3.5em;
+  line-height: 1.1;
+}
+
+.page2 .titlezone h2 {
+  font-size: 1.2;
+  text-transform: unset;
+  line-height: calc(var(--font-lineHeight) * 1.8);
+  font-weight: 300;
+  hyphens: auto;
+}
+
+
+
+.sub a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+  text-decoration: underline;
+  text-decoration-color: var(--color-bleu-france);
+  color: var(--color-bleu-france);
+  font-style: italic;
+}
+
+#mutualisé h3 {
+  margin-top: 0;
+}
+
