--- a/css/marqueEtat/modules/page4.css
+++ b/css/marqueEtat/modules/page4.css
@@ -16,3 +16,46 @@
   width: 100%;
   height: 20mm
 }
+
+.etapes {
+  display: grid;   
+  grid-template-columns: [left] 1fr [right] 1fr;
+  border: 1px solid var(--color-bleu-france);
+  padding: 2em;
+}
+
+.etapes .header {
+  grid-column: 1 / 3;
+  text-align: center;
+  width: 100%;
+  font-weight: 300;
+  
+}
+
+.etapes .header p {
+  text-align: center;
+  max-width: 60ch; 
+  margin: 0 auto; 
+}
+
+.etape {
+  padding-right: 3ch;
+}
+
+.etape:first-of-type {
+  border-right: 1px solid var(--color-bleu-france);
+}
+
+.etape li::marker {
+    color: var(--color-bleu-france);
+    font-size: 1.2em;
+  }
+
+
+  ol li::marker {
+      color:red;
+  }
+
+  #un-processus-technique-reproductible-par-étape h2 {
+    margin-top: 0;
+  }
