--- a/css/marqueEtat/modules/vars.css
+++ b/css/marqueEtat/modules/vars.css
@@ -1,5 +1,3 @@
-
-
 :root {
   /* color for the interface */
   --color-background: rgba(0, 0, 0, 0.2);
@@ -14,34 +12,24 @@
 
 
   /* fonts for the book */
-  --font-body: "Spectral";
+  --font-body: "Marianne";
   --font-body-small-caps: "Marianne";
-  --font-text: "Spectral";
+  --font-text: "Marianne";
   --font-title: "Marianne";
-
+  --font-serif: "Spectral";
   /* for the state stuff */
   --unit: 6mm;
-  
+
   /* typographic related variables */
   --font-size: 13px;
-  --font-lineHeight: 22px;
+  --font-lineHeight: 18px;
   --text-indent: 3em;
-
-
-
   --color-body: black;
-  --color-primary: darkred;
-  --accessibility: black;
-  --back: var(--color-primary);
-  --blue: black;
-  --color-secondary: black;
- 
+  --color-primary: var(--color-bleu-france);
+  --color-secondary: var(--color-rouge-marianne);
 
 
 
-/* colors from the palette */
-
-
-
-
+  /* colors from the palette */
 }
+
